# Sly

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: bot.rs  main.rs
src/commands/: bind_steam.rs  command.rs  create_binding.rs  link_steam.rs  mod.rs  ping.rs  random_game.rs  random_wishlist_game.rs  unlink_steam.rs
src/data/: api_resources.rs  bindings.rs  mod.rs
src/schemas/: mod.rs  owned_games.rs  steam_user.rs  wishlist_data.rs
